--- a/Tourist.html
+++ b/Tourist.html
@@ -1,1 +1,21 @@
 <html>
+
+<head>
+	<title>Tourist Attractions</title>
+</head>
+
+<body bgcolor = "black">
+
+<font face = "Georgia" color = "white">
+<center><h1><b><u>Tourist Attractions in the UAE: Economy pt. 2</u></b></h1></center>
+
+<p>The UAE is a major tourist attraction.
+Its most popular attraction is the city of Dubai as a whole.
+The city contains multiple skyscrapers and luxury hotels.
+The most notable hotel is the Burj al Arab</p>
+<br>
+<img src = "WebsitePics\burjalarab.jpg">
+<br>
+</font>
+</body>
+</html>
