--- a/images.html
+++ b/images.html
@@ -1,1 +1,11 @@
 <html>
+
+<head>
+	<title>Virtual Image Tour</title>
+<head>
+
+<body bgcolor = "green">
+<font color = "yellow" face = "Verdana">
+</font>
+</body>
+</html>
