--- a/majorcities.html
+++ b/majorcities.html
@@ -1,1 +1,12 @@
 <html>
+
+<head>
+	<title>Major Cities</title>
+</head>
+
+<body bgcolor = "red">
+<font color = "black" face = "Times">
+
+</font>
+</body>
+</html>
