--- a/uae.html
+++ b/uae.html
@@ -17,7 +17,8 @@
 <br>
 <br>
 
-<center><pre><a href = "Link01.html">Geography</a>	<a href = "Link02.html">Demographics and Economics</a>	<a href = "Link03.html">Major Cities</a>	<a href = "Link04.html">Tourist Attractions</a>	   <a href = "Link05.html">Virtual tour through a lot of images</a></pre></center>
+<center><pre><a href = "UAE/Geography.html">Geography</a>	<a href = "UAE/demographics.html">Demographics and Economics</a>	<a href = "UAE/majorcities.html">Major Cities</a>	<a href = "UAE/Tourist.html">Tourist Attractions</a>	   <a href = "UAE/image.html">Virtual tour through a lot of images</a></pre></center>
+<!--These links need to be checked-->
 
 <br>
 <hr>
