--- a/uae.html
+++ b/uae.html
@@ -26,7 +26,7 @@
 
 <center><h3>General Information</h3></center>
 
-<p><font size = "5">Welcome to this fact page about the United Arab Emirates.
+<font size = "5"><p>Welcome to this fact page about the United Arab Emirates.
 Here you will find simple yet useful information about this country.
 To direct yourself to a specific page, click on one of the links above.
 If you wish to just read on, help yourself.
