--- a/images.html
+++ b/images.html
@@ -2,10 +2,11 @@
 
 <head>
 	<title>Virtual Image Tour</title>
-<head>
+</head>
 
 <body bgcolor = "green">
 <font color = "yellow" face = "Verdana">
+Welcome
 </font>
 </body>
 </html>
