--- a/Tourist.html
+++ b/Tourist.html
@@ -16,6 +16,10 @@ The most notable hotel is the Burj al Arab</p>
 <br>
 <img src = "WebsitePics\burjalarab.jpg">
 <br>
+<p>The Burj al Arab is a five-star hotel with luxury accomodations.
+	It sits right on the water off the coast of Dubai.
+
+	<a href = "https://www.jumeirah.com/en/hotels-resorts/dubai/burj-al-arab/">Burj al Arab: Official Website</a>
 </font>
 </body>
 </html>
