--- a/Tourist.html
+++ b/Tourist.html
@@ -6,8 +6,9 @@
 
 <body bgcolor = "black">
 
-<font face = "Georgia" color = "white">
 <center><h1><b><u>Tourist Attractions in the UAE: Economy pt. 2</u></b></h1></center>
+
+<font face = "Georgia" color = "white" size = "4">
 
 <p>The UAE is a major tourist attraction.
 Its most popular attraction is the city of Dubai as a whole.
@@ -18,8 +19,25 @@ The most notable hotel is the Burj al Arab</p>
 <br>
 <p>The Burj al Arab is a five-star hotel with luxury accomodations.
 	It sits right on the water off the coast of Dubai.
-
-	<a href = "https://www.jumeirah.com/en/hotels-resorts/dubai/burj-al-arab/">Burj al Arab: Official Website</a>
+	The hotel boasts many unique ammenities, including an option to arrive via helicopter.
+	I created a fake booking on the website linked at the end of this paragraph.
+	I asked for rates for two people in July, 2017 (I was "booking" this in December, 2016)
+	I made it one room, from Sunday to Saturday, and looked for the best rate.
+	$7,992.07. That was the best rate I found. That's for the whole room.
+	That is how expensive this luxury hotel is.
+	It has pools and personal butlers and is basically entirely composed of suites.
+	<a href = "https://www.jumeirah.com/en/hotels-resorts/dubai/burj-al-arab/">Burj al Arab: Official Website</a></p>
+<br>
+	<p>Dubai is also home to the world's tallest building: the Burj Khalifa.</p>
+<br>
+<img src = "WebsitePics\burjkhalifa.jpg">
+<p>The Burj Khalifa is, technically speaking, the world's tallest man-made structure.
+	It stands over 160 stories tall in the Dubai Skyline.
+	The building has observation decks on floors 148, 125, and 124.
+	On the very top of the building is a transmissions spire.</p>
+	<a href = "http://www.burjkhalifa.ae/en/index.aspx">Burj Khalifa: Home Page</a>
+<br>
+<p>
 </font>
 </body>
 </html>
