--- a/Tourist.html
+++ b/Tourist.html
@@ -34,10 +34,25 @@ The most notable hotel is the Burj al Arab</p>
 <p>The Burj Khalifa is, technically speaking, the world's tallest man-made structure.
 	It stands over 160 stories tall in the Dubai Skyline.
 	The building has observation decks on floors 148, 125, and 124.
-	On the very top of the building is a transmissions spire.</p>
+	On the very top of the building is a transmissions spire.
+	While Dubai as a city is recovering from an ecconomic crisis, the Burj Khalifa still remains a large draw for tourists around the world.
+	The main requirement for this is not to be afraid of heights.
+	I mean, it is pretty big......</p>
 	<a href = "http://www.burjkhalifa.ae/en/index.aspx">Burj Khalifa: Home Page</a>
 <br>
-<p>
+<p>Abu Dhabi, the capital of the UAE, is famous for its indoor amusement park known as Ferrari World.
+	The park, if seen from above, looks like a giant warped triangle with the Ferrari logo on it.
+	The entire park is, as suggested by the name, themed to Ferrari, the car company.
+	It has specialized rides for the company, as well as a comedy show with two goofballs changing a tire.
+	Ferrari World is most famous, however, for boasting the fastest roller coaster in the world.</p>
+<p>The name of this coaster is: Formula Rossa.
+	Manufactured by the Swiss Company Intamin, it can reach speeds of up to 149mph.
+	It attains such speed through a high-speed launch.
+	A mechanism is attached to the underside of the train, and it pulls it forward via a high-speed winch.
+	Eventually, the train detaches from the launch mechanism, and physics take over until the train hits the final brake run.
+	Because of its intense speed, all riders are required to wear specialized protective goggles, regardless of if they already wear glasses.
+	Additionally, the park asks riders not to ride the coaster twice in a span of 15 minutes or less.
+	Formula Rossa draws enthusiasts from all over the world to ride this landmark attraction, boosting the park's popularity.</p>
 </font>
 </body>
 </html>
