--- a/Tourist.html
+++ b/Tourist.html
@@ -40,11 +40,17 @@ The most notable hotel is the Burj al Arab</p>
 	I mean, it is pretty big......</p>
 	<a href = "http://www.burjkhalifa.ae/en/index.aspx">Burj Khalifa: Home Page</a>
 <br>
-<p>Abu Dhabi, the capital of the UAE, is famous for its indoor amusement park known as Ferrari World.
-	The park, if seen from above, looks like a giant warped triangle with the Ferrari logo on it.
+<p>Abu Dhabi, the capital of the UAE, is famous for its indoor amusement park known as Ferrari World.</p>
+	
+	<img src = "WebsitePics/ferrariworld.jpg">
+	
+	<p>The park, if seen from above, looks like a giant warped triangle with the Ferrari logo on it.
 	The entire park is, as suggested by the name, themed to Ferrari, the car company.
 	It has specialized rides for the company, as well as a comedy show with two goofballs changing a tire.
 	Ferrari World is most famous, however, for boasting the fastest roller coaster in the world.</p>
+
+<img src = "WebsitePics/formularossa.jpg">	
+
 <p>The name of this coaster is: Formula Rossa.
 	Manufactured by the Swiss Company Intamin, it can reach speeds of up to 149mph.
 	It attains such speed through a high-speed launch.
@@ -54,6 +60,51 @@ The most notable hotel is the Burj al Arab</p>
 	Additionally, the park asks riders not to ride the coaster twice in a span of 15 minutes or less.
 	Formula Rossa draws enthusiasts from all over the world to ride this landmark attraction, boosting the park's popularity.</p>
 
+<img src = "WebsitePics/ferrariworldentrance.jpg">
+	
+<p>The park, besides Formula Rossa, has many other attractions.
+	It has a dark ride where you pursue a video game who stole, get this, keys to a Ferrari.
+	There's another ride like that where you help a mouse win a race.
+	The park also has a documentary about the founder of the company, Enzo Ferrari.
+	Finally, it has two other roller coasters: Fiorano GT Challenge and Flying Aces</p>
+	
+<img src = "WebsitePics/fioranogt.jpg">
+
+<p>Fiorano GT Challenge, pictured above, is a Maurer launched racing coaster.
+	It is currently the only one of its kind in existance, and is oriented mainly towards families.
+	The two trains can each seat up to twelve people and run simultaneously on racing courses.</p>
+
+<img src = "WebsitePics/flyingaces.jpg">
+
+<p>Flying Aces, pictures above, is an Intamin Wing Coaster.
+	It holds the record for the world's largest non-inverting loop.
+	Despite Formula Rossa being many times faster, many consider Flying Aces the most intense attraction at the park.
+	It is very recent, having been built in 2016.</p>
+	
+	<a href = "https://ferrariworldabudhabi.com/">Ferrari World Home Page</a>
+
+<p>The park, in the coming years, is adding two new attractions.
+	The first is an Intamin shuttle coaster.
+	This means that, on the same track, the coaster will go both forwards and backwards.
+	It is called Vortex, and will open in 2017 with Mission Ferrari.
+	Mission Ferrari is a Dynamic Attractions dark ride/roller coaster.
+	It combines outdoor roller coaster elements with indoor dark ride effects.
+	It operates similarly to the Gringotts ride at Universal Islands of Adventure in Florida.</p>
+	
+<img src = "WebsitePics/ski-dubai.jpg">
+
+<p>I forgot to mention earlier, Dubai is home to an indoor skiing area, known as Ski Dubai.
+	The area consists of 22,500 square meters of snow with five different runs.
+	The place is open year-round, and they have a live Penguin March several times a day.
+	They use real, actual penguins, not just a bunch of actors in costumes.
+	Skiing and snowboarding are allowed, and there's also a zipline too.</p>
+	
+	<a href = "https://www.theplaymania.com/skidubai">Ski Dubai Home Page</a>
+
+<img src = "WebsitePics/skidubai.jpg">
+
+<img src = "WebsitePics/skidubai.jpg">
+	
 </font>
 </body>
 </html>
