--- a/Tourist.html
+++ b/Tourist.html
@@ -90,6 +90,19 @@ The most notable hotel is the Burj al Arab</p>
 	Mission Ferrari is a Dynamic Attractions dark ride/roller coaster.
 	It combines outdoor roller coaster elements with indoor dark ride effects.
 	It operates similarly to the Gringotts ride at Universal Islands of Adventure in Florida.</p>
+
+<img src = "WebsitePics/wildwadi.jpg">
+
+<p>Right next door to Ferrari World is Wild Wadi, pictured above and below.
+	Wild Wadi is an outdoor water park located right beside the Burj al Arab hotel.
+	It is home to many great water slides, and is located by a beach hotel as well.
+	Tantrum Alley, one of many water slides, features three elements where the ride raft goes up and down the sides of a funnel before continuing on the slide.
+	It is pretty famous for this feature.
+	The most recent water slide is the Jumeirah Sceirah.
+	The water slide starts with a trapdoor capsule, meaning you are standing upright until the floor drops out from under you and you plunge into the water slide.
+	It is very thrilling and popular.</p>
+	<a href = "https://www.jumeirah.com/en/hotels-resorts/dubai/wild-wadi/">Wild Wadi: Home Page</a>
+<img src = "WebsitePics/wildwadifullpark.jpg">
 	
 <img src = "WebsitePics/ski-dubai.jpg">
 
@@ -103,8 +116,14 @@ The most notable hotel is the Burj al Arab</p>
 
 <img src = "WebsitePics/skidubai.jpg">
 
-<img src = "WebsitePics/skidubai.jpg">
+<p>Dubai also has, right near the Burj al Arab, a place called the Palm Islands.
+	The Palm Islands are currently under construction but nearing full completion.
+	They are a set of three artificial islands designed as residential living places.
+	They have beautiful landscaping and architecture.
+	The three Palm Islands are artificially built, kind of like the ancient Aztec city of Tenochtitlan.</p>
 	
+<img src = "WebsitePics/palmisland.jpg">
+
 </font>
 </body>
 </html>
