--- a/majorcities.html
+++ b/majorcities.html
@@ -7,6 +7,14 @@
 <body bgcolor = "red">
 <font color = "black" face = "Times">
 
+<p>When travelling to the UAE, you will most likely fly in to one of two major cities: Abu Dhabi or Dubai.
+	Transportation will most likely to be provided through Emirates Airlines.
+	<a href = "https://www.emirates.com/us/english/">Emirates Air: Home Page</a>
+	Since we, the creators of this website, are from the Boston area, that is the information we will be divulging for travel.
+	If you were to travel to the UAE from Boston, you would first most likely have to somehow get to New York City.
+	From there, you will take a TransAtlantic flight to your destination in the UAE, with a possible stop to refuel in Europe.</p>
+
+<p>
 </font>
 </body>
 </html>
