--- a/majorcities.html
+++ b/majorcities.html
@@ -7,14 +7,32 @@
 <body bgcolor = "red">
 <font color = "black" face = "Times">
 
-<p>When travelling to the UAE, you will most likely fly in to one of two major cities: Abu Dhabi or Dubai.
-	Transportation will most likely to be provided through Emirates Airlines.
-	<a href = "https://www.emirates.com/us/english/">Emirates Air: Home Page</a>
-	Since we, the creators of this website, are from the Boston area, that is the information we will be divulging for travel.
+<p>When travelling to the UAE, you will most likely fly in to one of two major cities: Abu Dhabi or Dubai.</p>
+	<img src = "WebsitePics/a380.jpg">
+	<p>Transportation will most likely to be provided through Emirates Airlines.</p>
+	<a href = "https://www.emirates.com/us/english/"><img src = "WebsitePics/emiratesair.jpg"></a>
+	<p>Since we, the creators of this website, are from the Boston area, that is the information we will be divulging for travel.
 	If you were to travel to the UAE from Boston, you would first most likely have to somehow get to New York City.
 	From there, you will take a TransAtlantic flight to your destination in the UAE, with a possible stop to refuel in Europe.</p>
+	
+<img src = "WebsitePics/emiratesairlinesattendants.jpg">
 
-<p>
+<p>Abu Dhabi is the capital of the UAE, but is mostly not very popular with the tourists.
+	The biggest attractions in Abu Dhabi are Yas Waterworld and Ferrari World.
+	The rest of the city is mostly just office and work buildings, as well as government centers.
+	The government is basically a hereditary monarchy, with a ruling council as well.
+	They are headquartered in Abu Dhabi.
+	Except for the parks and government, there is little else in Abu Dhabi.</p>
+
+<p>The main city in the United Arab Emirates isn't Abu Dhabi, but actually Dubai.
+	Dubai is a coastal city around the midpoint of the UAE coastline.
+	The city is mainly known for its tall buildings and sweeping architecture.
+	The biggest attractions in Dubai are Wild Wadi, the Burj Khalifa, and Burj al Arab.
+	Dubai has many more hotels scattered throughout, and is a very large city.
+	They are currently recovering from an economic crisis, but are making great headway.</p>
+
+	<img src = "WebsitePics/fullcity.jpg">
+	
 </font>
 </body>
 </html>
