--- a/images.html
+++ b/images.html
@@ -6,7 +6,37 @@
 
 <body bgcolor = "green">
 <font color = "yellow" face = "Verdana">
-Welcome
+<p>Welcome to our virtual image tour of the UAE!
+	Here all of our images we have collected will be displayed one by one.
+	Please enjoy!!</p>
+<br>
+	<img src = "WebsitePics/a380.jpg">
+	<img src = "WebsitePics/emiratesair.jpg">
+	<img src = "WebsitePics/emiratesairlinesattendants.jpg">
+<hr>
+	<img src = "WebsitePics/oilgloriousoil.gif">
+	<img src = "WebsitePics/oilrig.jpg">
+<hr>
+	<img src = "WebsitePics/burjalarab.jpg">
+	<img src = "WebsitePics/burjkhalifa.jpg">
+	<img src = "WebsitePics/uaeflag.gif">
+	<img src = "WebsitePics/fullcity.jpg">
+<hr>
+	<img src = "WebsitePics/ferrariworld.jpg">
+	<img src = "WebsitePics/ferrariworldentrance.jpg">
+	<img src = "WebsitePics/fioranogt.jpg">
+	<img src = "WebsitePics/formularossa.jpg">
+	<img src = "WebsitePics/flyingaces.jpg">
+<hr>
+	<img src = "WebsitePics/ski-dubai.jpg">
+	<img src = "WebsitePics/skidubai.jpg">
+<hr>
+	<img src = "WebsitePics/wildwadi.jpg">
+	<img src = "WebsitePics/wildwadifullpark.jpg">
+<hr>
+	<img src = "WebsitePics/palmisland.jpg">
+	<img src = "WebsitePics/map.gif">
+<br>
 </font>
 </body>
 </html>
