--- a/uae.html
+++ b/uae.html
@@ -6,48 +6,27 @@
 
 <body bgcolor = "lightblue">
 
-<center><h1>Welcome to the United Arab Emirates Fact Page</h1></center>
+<center><h1>United Arab Emirates</h1></center>
 
 <br>
-
-<p><center><h2>By: Noah Cederholm and Samuel Friday</h2></center></p>
 
 <br>
 <hr>
 <br>
 <br>
 
-<center><pre><a href = "UAE/Geography.html">Geography</a>	<a href = "UAE/demographics.html">Demographics and Economics</a>	<a href = "UAE/majorcities.html">Major Cities</a>	<a href = "UAE/Tourist.html">Tourist Attractions</a>	   <a href = "UAE/image.html">Virtual tour through a lot of images</a></pre></center>
-<!--These links need to be checked-->
+<center>
+<a href = "Link01.html"><img src="\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\geo.gif" height = "400" width = "400"></a>
+<a href = "Link02.html"><img src="\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\demo.png" height = "400" width = "400"></a>	
+<a href = "Link03.html"><img src="\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\majorcity.jpg" height = "400" width = "400"></a><br>	
+<a href = "Link04.html"><img src="\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\tourist.jpg" height = "400" width = "400"></a>	   
+<a href = "Link05.html"><img src="\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\pics.jpg" height = "400" width = "400"></a></pre></center>
 
 <br>
 <hr>
 <br>
 
-<center><h3>General Information</h3></center>
 
-<font size = "5"><p>Welcome to this fact page about the United Arab Emirates.
-Here you will find simple yet useful information about this country.
-To direct yourself to a specific page, click on one of the links above.
-If you wish to just read on, help yourself.
-This first page will be covering basic, simple information.
-Nothing too specialized or big. That's the job of the links up above.</p>
-<br>
-<p>The United Arab Emirates(UAE) is a Middle eastern country located in Western Asia bordering Oman and Saudi Arabia.
-UAE’s largest export is natural gas, they are the seventh largest oil reserve and their economy is heavily dependant on it.
-The UAE also gets a lot of revenue from tourism, as they are home to many great attractions we will discuss later.
-The country is slated to host the World’s Fair in 2020.
-Since the country is about as far south as Texas, temperatures tend to be very high, climbing to about 113℉ in August.</p>
-<br>
-<p>The UAE is home to two major cities: Abu Dhabi and Dubai. Dubai is the larger and more well-known of the two.
-Dubai is recovering from an economic crisis currently, and their prosperity is evident through beautiful architecture and towering skyscrapers.
-Dubai houses the Burj Khalifa, the tallest man-made structure in the entire world, at over 160 stories tall.
-Additionally, the city is home to a luxury hotel called the Burj al Arab.
-Abu Dhabi, on the other hand, is the nation's capital.
-The city is mostly known for Ferrari World, and indoor theme park home to the world's fastest roller coaster, Formula Rossa.</p>
-<br>
-<p>All materials and information on this web page were obtained and used for a school-related project.
-All credit goes to the creators of this material.</p>
 </font>
 </body>
 </html>
