--- a/majorcities.html
+++ b/majorcities.html
@@ -7,6 +7,8 @@
 <body bgcolor = "red">
 <font color = "black" face = "Times">
 
+<center><pre><a href = "Geography.html">Geography</a>	<a href = "demographics.html">Demographics and Economics</a>	<a href = "uae.html">Home Page</a>	<a href = "Tourist.html">Tourist Attractions</a>	   <a href = "images.html">Virtual tour through a lot of images</a></pre></center>
+	
 <p>When travelling to the UAE, you will most likely fly in to one of two major cities: Abu Dhabi or Dubai.</p>
 	<img src = "WebsitePics/a380.jpg">
 	<p>Transportation will most likely to be provided through Emirates Airlines.</p>
