--- a/images.html
+++ b/images.html
@@ -6,6 +6,9 @@
 
 <body bgcolor = "green">
 <font color = "yellow" face = "Verdana">
+	
+<center><pre><a href = "Geography.html">Geography</a>	<a href = "majorcities.html">Major Cities</a>	<a href = "uae.html">Home Page</a>	<a href = "Tourist.html">Tourist Attractions</a>	   <a href = "demographics.html">Demographics</a></pre></center>
+	
 <p>Welcome to our virtual image tour of the UAE!
 	Here all of our images we have collected will be displayed one by one.
 	Please enjoy!!</p>
