--- a/Tourist.html
+++ b/Tourist.html
@@ -10,6 +10,8 @@
 
 <font face = "Georgia" color = "white" size = "4">
 
+<center><pre><a href = "Geography.html">Geography</a>	<a href = "majorcities.html">Major Cities</a>	<a href = "uae.html">Home Page</a>	<a href = "images.html">Virtual Tour through Images</a>	   <a href = "demographics.html">Demographics</a></pre></center>
+	
 <p>The UAE is a major tourist attraction.
 Its most popular attraction is the city of Dubai as a whole.
 The city contains multiple skyscrapers and luxury hotels.
