--- a/demographics.html
+++ b/demographics.html
@@ -7,7 +7,9 @@
 <body>
 
 <font>
+	
+<center><pre><a href = "Geography.html">Geography</a>	<a href = "majorcities.html">Major Cities</a>	<a href = "uae.html">Home Page</a>	<a href = "Tourist.html">Tourist Attractions</a>	   <a href = "images.html">Virtual Tour through Images</a></pre></center>
+	
 </font>
-
 </body>
 </html>
