--- a/Geography.html
+++ b/Geography.html
@@ -1,1 +1,14 @@
 <html>
+<head>
+  <title>Geography</title>
+</head>
+  
+
+<body>
+<font>
+
+<center><pre><a href = "demographics.html">Demographics</a>	<a href = "majorcities.html">Major Cities</a>	<a href = "uae.html">Home Page</a>	<a href = "Tourist.html">Tourist Attractions</a>	   <a href = "images.html">Virtual Tour through Images</a></pre></center>
+
+</font>
+</body>
+</html>
