--- a/Geography.html
+++ b/Geography.html
@@ -1,14 +1,36 @@
 <html>
 <head>
-  <title>Geography</title>
+	<title>Geography</title>
 </head>
-  
 
-<body>
-<font>
+<body bgcolor = "red">
+<font color = "black" face = "Times">
+  <center><pre><a href = "demographics.html">Demographics</a>	<a href = "majorcities.html">Major Cities</a>	<a href = "uae.html">Home Page</a>	<a href = "Tourist.html">Tourist Attractions</a>	   <a href = "images.html">Virtual Tour through Images</a></pre></center>
+<center>
+<p>The United Arab Emirates(UAE) is a Middle eastern country located in Western Asia bordering Oman and Saudi Arabia.
+UAE's largest export is natural gas, they are the seventh largest oil reserve and their economy is heavily dependant on it.
+The UAE also gets a lot of revenue from tourism due to the climate of the area.
+</p>
+	<img src = "\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\geo1.jpg" width = "200" height = "200">
+	<p>Since the country is about as far south as Texas, temperatures tend to be very high, climbing to about 113 degrees in August.</p>
+	<img src = "\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\world.gif"  width = "200" height = "200"></a>
+	<p>UAE consists of two major cities; Abu Dhabi and Dubai.  Abu Dhabi makes up 87 percent of UAE's total area.</p>
+	
+<img src = "\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\city.jpg"  width = "200" height = "200"></a>
 
-<center><pre><a href = "demographics.html">Demographics</a>	<a href = "majorcities.html">Major Cities</a>	<a href = "uae.html">Home Page</a>	<a href = "Tourist.html">Tourist Attractions</a>	   <a href = "images.html">Virtual Tour through Images</a></pre></center>
+<p>The UAE stretches for more than 650 kilometers along the southern shore of the Persian Gulf. 
+Most of the coast consists of salt pans that extend far inland. The largest natural harbor is at Dubai, although other ports have been dredged at Abu Dhabi, Sharjah, and elsewhere.
+Numerous islands are found in the Persian Gulf. 
+The smaller islands, as well as many coral reefs and shifting sandbars, these conditions make navigating the islands difficult. 
+Strong tides and occasional windstorms further complicate ship movements near the shore.</p>
 
+<p>The climate of the UAE generally is very hot and sunny. 
+The hottest months are July and August, when average maximum temperatures reach above 122.0 °F. 
+In the Al Hajar al Gharbi Mountains, temperatures are considerably cooler, a result of increased altitude. 
+Average minimum temperatures in January and February are between 50.0 and 57.2 °F.</p>
+
+	<img src = "\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\temp.png"  width = "200" height = "200">
+	
 </font>
 </body>
 </html>
