--- a/demographics.html
+++ b/demographics.html
@@ -1,2 +1,24 @@
 <html>
+
+<head>
+	<title>Demographics</title>
+</head>
+
+<body bgcolor = "red">
+<font color = "black" face = "Times">
+<center><pre><a href = "demographics.html">Demographics</a>	<a href = "majorcities.html">Major Cities</a>	<a href = "uae.html">Home Page</a>	<a href = "Tourist.html">Tourist Attractions</a>	   <a href = "images.html">Virtual Tour through Images</a></pre></center>
+<center>
+<p>The population of UAE is one of the highest in the world mostly because of immigration.  
+The official and most prominent language spoken in the UAE is Arabic.
+The overwhelimg majority of the population are Islamic at 76% and 7% are Christian.
+Most of the population is between the ages of 15 and 65, with the male to female ratio at 2.2.
+There are about 2 children born per woman living in the UAE.
+</p>
+<img src = "\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\demo.png" width = "200" height = "200">
+<img src = "\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\peopl.jpg"  width = "200" height = "200"></a>
+<img src = "\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\rel.jpg"  width = "200" height = "200"></a>
+<img src = "\\fs-studentdata-01v\studentprofiles$\5601619\My Documents\kids.jpg"  width = "200" height = "200">
+	
+</font>
+</body>
 </html>
